# Ginkgo

./: .gitignore  AUTHORS  ChangeLog  GinkgoWin.dev  Makefile.am  configure.ac  edit-project-autobuild.sh  win_config.h
doc/: .gitignore  Makefile  ginkgo-user-manual.tex  notes-on-benchmarking.txt  upload.sh
doc/design/: gingko-design.tex
doc/source/: conf.py  configuration.rst  examples.rst  index.rst  installing.rst  running.rst
doc/source/_templates/: layout.html
examples/: cc100.asc  cc50.asc  g10x10_cc100_mv1.xml  g10x10_mv1.asc  g25x25_cc1000_mv1.xml  g25x25_cc1000_mv20.xml  g25x25_cc100_mv1.xml  g25x25_cc100_mv20.xml  g25x25_mv1.asc  g25x25_mv9.asc  rich.xml  tiny.xml  tiny_neutral.xml  trait_rand1.asc  trait_rand2.asc  trait_rand3.asc  trait_rand4.asc  trait_rand5.asc  trait_rand6.asc  trait_rand7.asc  trait_rand8.asc  trait_unif0.asc
examples/diamond/: cc.grd  diamond-null.xml  diamond1.xml  env10.grd  env_rnd.grd  mov.grd
gingko-cpp/: Makefile.am  carch_main.cpp
gingkocc/: Makefile.am  asciigrid.cpp  asciigrid.h  asciigrid.hpp  biosys.cpp  biosys.h  biosys.hpp  carch_defs.h  carch_main.cpp  cell.cpp  cell.h  cell.hpp  cmdopt.cpp  cmdopt.hpp  cmdopts.cpp  cmdopts.h  cmdopts.hpp  conf.cpp  conf.h  confsys.cpp  confsys.hpp  convert.cpp  convert.hpp  filesys.cpp  filesys.h  filesys.hpp  geosys.cpp  geosys.h  gingko.cpp  gingko_defs.h  gingko_defs.hpp  greet.cpp  greet.h  landscape.cpp  landscape.h  landscape.hpp  memcheck.cpp  memcheck.hpp  randgen.cpp  randgen.h  (+16 more)
gingkocc/prototypes/: Makefile.am  unmanaged-ind.cpp  version2.cpp
gingkocc/support/: Markup.h
gingkocc/tests/: Makefile.am  gingko_tests.py  run_test_asciigrid.py  run_test_cmdopt.py  run_test_cmdopts.py  run_test_conf_parser.py  run_test_textutil.py  run_test_textutils.py  run_test_tree.py  run_tests.py  test_asciigrid.cpp  test_cmdopt.cpp  test_cmdopts.cpp  test_conf_parse.cpp  test_conf_parse_block.cpp  test_convert.cpp  test_filesys.cpp  test_organism.cpp  test_parse_conf_block.cpp  test_parse_conf_file.cpp  test_textutil.cpp  test_textutils.cpp  test_tree.cpp  test_tree_from_genealogies.cpp  test_tree_from_parent_indexes.cpp
gingkocc/tests/data/: simple2.grd
gingkocc/tests/data/dispersal-test/: cc100.grd  e101.grd  m1.grd  x10.conf
gingkocc/tests/data/dummy1/: dummy.conf
gingkocc/tests/data/dummy1/grids/: cc_0-200.grd  cc_0-50.grd  env1_U005.grd  env1_default.grd  env2_U-005.grd  spA_barrier.grd  spB_barrier.grd  spB_continuous.grd
gingkocc/tests/data/example/: cc10.grd  e100.grd  e101.grd  e110.grd  e111.grd  example.conf  m0.grd
gingkocc/tests/data/examples/example1/: cc.grd  env2.grd  example1.xml  mov.grd
gingkocc/tests/data/neutral-10x10-continuous/: neutral-10x10-continuous.conf
gingkocc/tests/data/neutral-10x10-continuous/grids/: cc1K.grd
gingkocc/tests/data/neutral-unstructured/: neutral-unstructured.conf
gingkocc/tests/data/neutral-unstructured/grids/: cc100K.grd  cc10K.grd  cc1K.grd  cc50K.grd
gingkocc/tests/data/simple/: simple.conf
gingkocc/tests/data/simple/grids/: cc1C.grd
gingkopy/: README.txt
gingkopy/gingkopy/: __init__.py  gingko.py
ginkgocc/: Makefile.am  asciigrid.cpp  asciigrid.hpp  biosys.cpp  biosys.hpp  cell.cpp  cell.hpp  cmdopt.cpp  cmdopt.hpp  confsys.cpp  confsys.hpp  convert.cpp  convert.hpp  echo_ginkgo_info.sh  echo_tags.sh  filesys.cpp  filesys.hpp  gingko.cpp  gingko_defs.hpp  ginkgo.cpp  ginkgo_defs.hpp  landscape.cpp  landscape.hpp  logging.cpp  logging.hpp  memcheck.cpp  memcheck.hpp  organism.cpp  organism.hpp  population.cpp  population.hpp  randgen.cpp  randgen.hpp  species.cpp  species.hpp  textutil.cpp  textutil.hpp  tree.cpp  tree.hpp  win_config.h  (+4 more)
ginkgocc/tests/: Makefile.am  ginkgo_tests.py  run_test_asciigrid.py  run_test_cmdopt.py  run_test_conf_parser.py  run_test_filesys.py  run_test_textutil.py  run_test_tree.py  test_asciigrid.cpp  test_cmdopt.cpp  test_convert.cpp  test_filesys.cpp  test_organism_states.cpp  test_parse_conf_block.cpp  test_parse_conf_file.cpp  test_textutil.cpp  test_tree_from_genealogies.cpp  test_tree_from_parent_indexes.cpp  test_world_log.cpp
ginkgocc/tests/data/examples/example1/: env0.grd  example1.xml
ginkgopy/: .gitignore  README.txt  setup.py
ginkgopy/ginkgo/: __init__.py  argparse.py  calc.py  config.py  ginkgocalc.py  ginkgoconfig.py  ginkgogrid.py
ginkgopy/ginkgopy/: config.py  ginkgo.py
ginkgopy/scripts/: gen-ascii-grid.py  gen-grid.py  ginkgo-ascii-grid.py  ginkgo-grid-coordinates.py  ginkgogrid.py
