AM_CPPFLAGS = @CPPFLAGS@
AM_LDFLAGS  = @LDFLAGS@

bindir = ${prefix}/@PACKAGE@/bin

bin_PROGRAMS = gingko

noinst_HEADERS = \
	gingko_defs.h

gingko_SOURCES = \
    gingko.cpp \
    randgen.cpp \
    biosys.cpp \
    landscape.cpp \
    cell.cpp \
    world.cpp \
    cmdopts.cpp \
    textutils.cpp \
    tree.cpp \
    conf.cpp
