AM_CPPFLAGS = @CPPFLAGS@
AM_LDFLAGS  = @LDFLAGS@

bindir = ${prefix}/@PACKAGE@/bin

bin_PROGRAMS = gingko

noinst_HEADERS = \
	gingko_defs.hpp

gingko_SOURCES = \
    gingko.cpp \
    randgen.cpp \
    biosys.cpp \
    landscape.cpp \
    cell.cpp \
    world.cpp \
    cmdopts.cpp \
    textutil.cpp \
    tree.cpp \
    worldconf.cpp \
    asciigrid.cpp  \
    filesys.cpp
